SERVER-39879 Fix unique_function constructor selection issues